crates/pack/tests/compile_fail/fact_new_without_feature.stderr
error[E0599]: no function or associated item named `construct` found for struct `ContextFact` in the current scope
 --> tests/compile_fail/fact_new_without_feature.rs:9:30
  |
9 |     let _fact = ContextFact::construct(ContextKey::Seeds, "test-id", "test-content");
  |                              ^^^^^^^^^ function or associated item not found in `ContextFact`
  |
note: if you're trying to build a new `ContextFact`, consider using `ContextFact::new_projection` which returns `ContextFact`
 --> src/fact.rs
  |
  | /     pub fn new_projection(
  | |         key: ContextKey,
  | |         id: impl Into<FactId>,
  | |         content: impl Into<String>,
  | |         promotion_record: FactPromotionRecord,
  | |         created_at: impl Into<Timestamp>,
  | |     ) -> Self {
  | |_____________^
help: there is a method `content` with a similar name, but with different arguments
 --> src/fact.rs
  |
  |     pub fn content(&self) -> &str {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
